// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DragDrop /> component to render correctly when loading 1`] = `
<div
  className="drag-drop-container "
  onDragEnter={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <p
    className="drag-label"
  >
    Drag file to upload
  </p>
</div>
`;

exports[`<DragDrop /> component to render correctly when not loading 1`] = `
<div
  className="drag-drop-container loading"
  onDragEnter={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <p
    className="drag-label"
  >
    Loading...
  </p>
</div>
`;
